tests/errors/semantic/blocking/UNRECOGNISED_FUNCTION_CALL.py
# pylint: disable=missing-function-docstring, missing-module-docstring
from numpy import zeros

a = zeros()
